--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "antd-mobile": "^2.2.0",
+    "asset-require-hook": "^1.2.0",
     "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
     "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
@@ -20,7 +22,9 @@
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "cookie-parser": "^1.4.3",
+    "cross-env": "^5.2.0",
     "css-loader": "0.28.7",
+    "css-modules-require-hook": "^4.2.3",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "4.10.0",
@@ -65,7 +69,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "server": "cross-env NODE_ENV=test nodemon --exec babel-node -- server/server.js",
+    "server1": "nodemon server/server.js"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -106,6 +112,13 @@
       "react-app"
     ],
     "plugins": [
+      [
+        "import",
+        {
+          "libraryName": "antd-mobile",
+          "style": "css"
+        }
+      ],
       "transform-decorators-legacy"
     ]
   },
